--- a/index.html
+++ b/index.html
@@ -88,3 +88,35 @@
             </div>
         </div>
     </section>
+    
+     <!-- Section Galerie (Page 4) -->
+    <section id="galerie">
+        <h2 class="gallery-title">Notre Galerie</h2>
+        <hr class="brown-line"> <!-- Trait marron sous le titre -->
+        <div class="gallery-grid">
+            <div class="gallery-item">
+                <div class="gallery-image" style="background: url(images/van\ gogh\ 1.png) lightgray 50% / cover no-repeat;"></div>
+                <h3 class="gallery-caption">Nuit Solaire</h3>
+            </div>
+            <div class="gallery-item">
+                <div class="gallery-image" style="background: url(images/august\ macke\ 1.png) lightgray 50% / cover no-repeat;"></div>
+                <h3 class="gallery-caption">Land Dorée</h3>
+            </div>
+            <div class="gallery-item">
+                <div class="gallery-image" style="background: url(images/edvard\ munch\ 1.png) lightgray 50% / cover no-repeat;"></div>
+                <h3 class="gallery-caption">Crépuscule</h3>
+            </div>
+            <div class="gallery-item">
+                <div class="gallery-image" style="background: url(images/jan\ sluijters\ 1.png) lightgray 50% / cover no-repeat;"></div>
+                <h3 class="gallery-caption">Bal Dansant</h3>
+            </div>
+            <div class="gallery-item">
+                <div class="gallery-image" style="background: url(images/john\ marin\ 1.png) lightgray 50% / cover no-repeat;"></div>
+                <h3 class="gallery-caption">Ciel d'Azur</h3>
+            </div>
+            <div class="gallery-item">
+                <div class="gallery-image" style="background: url(images/vassily\ kandinsky\ 1.png) lightgray 50% / cover no-repeat;"></div>
+                <h3 class="gallery-caption">Vertiges</h3>
+            </div>
+        </div>
+    </section>
