--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="#about">Accueil</a></li>
-                    <li><a href="#galerie">Galerie d'art</a></li>
+                    <li><a href="#galerie">Galerie</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
