--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="nav-links">
                     <li><a href="#about">Accueil</a></li>
                     <li><a href="#galerie">Galerie</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
