--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-content">
             <div class="logo-small">
                 <!-- Logo de la galerie (version réduite) -->
-                <img src="images/logo blanc.png" alt="Logo Galerie Dechewsky">
+                <img src="images/logo_blanc.png" alt="Logo Galerie Dechewsky">
             </div>
             <!-- Barre de navigation -->
             <nav>
@@ -43,7 +43,7 @@
     <section class="logo-icons-section">
         <div class="logo-container">
             <!-- Logo principal de la galerie (version plus grande) -->
-            <img src="images/logo marron.png" alt="Logo Galerie Dechewsky">
+            <img src="images/logo_marron.png" alt="Logo Galerie Dechewsky">
         </div>
 
         <div class="features">
@@ -77,7 +77,7 @@
         <div class="about-content">
             <!-- Image à gauche -->
             <div class="about-image">
-                <img src="images/Max ernst 1.png" alt="Image d'art exposé">
+                <img src="images/Max_ernst.png" alt="Image d'art exposé">
             </div>
             <!-- Citation centrée et texte à droite -->
             <div class="about-text">
