--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galerie Dechewsky</title>
+    <title>Galerie Dechewsky : Un voyage virtuel parmi les oeuvres</title>
+    <meta name="description" content="Explorez une collection variée et laissez-vous inspirer par des créations captivantes et innovantes.">
+    <meta name="keywords" content="galerie,art,expressionisme">
     <!-- Lien vers Google Fonts pour charger la police Playfair Display -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <!-- Lien vers Font Awesome pour les icônes -->
