--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Galerie Dechewsky : Un voyage virtuel parmi les oeuvres</title>
     <meta name="description" content="Explorez une collection variée et laissez-vous inspirer par des créations captivantes et innovantes.">
     <meta name="keywords" content="galerie,art,expressionisme">
+      <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';          /* Autorise seulement les ressources du même domaine */
+        script-src 'self' https://trusted-scripts.com;  /* Autorise les scripts du même domaine et d'un domaine de confiance */
+        style-src 'self' https://trusted-styles.com;    /* Autorise les styles du même domaine et d'un domaine de confiance */
+        img-src 'self' data:;         /* Autorise les images du même domaine et les images inline (data URIs) */
+        font-src 'self' https://fonts.gstatic.com;       /* Autorise les polices du même domaine et de Google Fonts */
+    ">
     <!-- Lien vers Google Fonts pour charger la police Playfair Display -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <!-- Lien vers Font Awesome pour les icônes -->
