--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerie Dechewsky : Un voyage virtuel parmi les oeuvres</title>
     <meta name="description" content="Explorez une collection variée et laissez-vous inspirer par des créations captivantes et innovantes.">
-    <meta name="keywords" content="galerie,art,expressionisme">
+    <meta name="keywords" content="galerie,art virtuel,expressionisme, tableaux d'art,exposition d'art expressionniste Dechewsky, Galerie d’art virtuel pour artistes émergents, Œuvres uniques d'art en ligne, art digital">
     <!-- Lien vers Google Fonts pour charger la police Playfair Display -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <!-- Lien vers Font Awesome pour les icônes -->
