--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <!-- Barre de navigation -->
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#about">Accueil</a></li>
-                    <li><a href="#galerie">Galerie</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about" title="En savoir plus sur notre galerie">Accueil</a></li>
+                    <li><a href="#galerie" title="Découvrez nos oeuvres">Galerie</a></li>
+                    <li><a href="#contact" title="Pour en savoir plus, contaxtez-nous">Contact</a></li>
                 </ul>
             </nav>
         </div>
