--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     10 Rue de la République<br>
                     75000 Paris
                 </p>
-                <p style="margin-top: 60px;">
+                <p class="number">
                     Téléphone: 01.63.45.85.56<br>
                     Fax: 01.63.45.78.52<br>
                     Email: galerie.dechewsky@gmail.com
